--- a/stopwatcah.css
+++ b/stopwatcah.css
@@ -18,4 +18,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}button:hover{
+    background-color: orange;
+    color: black;
+    border-radius: 10px;
 }
