--- a/stopwatcah.css
+++ b/stopwatcah.css
@@ -11,7 +11,7 @@
     font-size: 50px;
     border: 2px solid orange;
     padding: 5px 5px;
-    margin: 0px 10px;
+    margin: 0px 40px;
     cursor: pointer;
 }.container{
     display: flex;
@@ -22,4 +22,8 @@
     background-color: orange;
     color: black;
     border-radius: 10px;
+}#main{
+    font-size: 200px;
+    margin: 40px 0px;
+
 }
